Add IPv6 tab for OpenVPN connections

BUG:339652