libs/editor/connectiondetaileditor.cpp
@@ -40,6 +40,7 @@
 #include "settings/vlanwidget.h"
 #include "settings/wimaxwidget.h"
 #include "vpnuiplugin.h"
+#include "vpn/openvpn/nm-openvpn-service.h"
 
 #include <QDebug>
 
@@ -269,6 +270,7 @@ void ConnectionDetailEditor::initTabs()
     const NetworkManager::ConnectionSettings::ConnectionType type = m_connection->connectionType();
 
     // setup the widget tabs
+    QString serviceType;
     if (type == NetworkManager::ConnectionSettings::Wired) {
         WiredConnectionWidget * wiredWidget = new WiredConnectionWidget(m_connection->setting(NetworkManager::Setting::Wired), this);
         m_ui->tabWidget->addTab(wiredWidget, i18n("Wired"));
@@ -325,7 +327,6 @@ void ConnectionDetailEditor::initTabs()
         if (!vpnSetting) {
             qDebug() << "Missing VPN setting!";
         } else {
-            QString serviceType;
             if (m_new && !m_vpnType.isEmpty()) {
                 serviceType = m_vpnType;
                 vpnSetting->setServiceType(serviceType);
@@ -366,7 +367,8 @@ void ConnectionDetailEditor::initTabs()
          || type == ConnectionSettings::Wimax
          || type == ConnectionSettings::Bond
          || type == ConnectionSettings::Bridge
-         || type == ConnectionSettings::Vlan) && !isSlave()) {
+         || type == ConnectionSettings::Vlan
+         || (type == ConnectionSettings::Vpn && serviceType == QLatin1String(NM_DBUS_SERVICE_OPENVPN))) && !isSlave()) {
         IPv6Widget * ipv6Widget = new IPv6Widget(m_connection->setting(NetworkManager::Setting::Ipv6), this);
         m_ui->tabWidget->addTab(ipv6Widget, i18n("IPv6"));
     }
